5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4352/executions/1771_1580.log
== TEST (2019-05-29 22:47:01) 
-- CODE:
nota = array(eval(input("digite a nota: ")))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nota = array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:57:25) 
-- CODE:
from numpy import*
nota = array(eval(input("digite as notas: ")))
nome = eval(input("digite os nomes: "))
falt = 0
apro = 0
while nota > 0 and nota < 10:
	nota = array(eval(input("digite as notas: ")))
	nome = eval(input("digite os nomes: "))
	if nota == -1.0:
		falt = falt + 1
		print(falt)
   elif nota >= 6.0:
		apro = apro + 1
		print(apro)
	elif nota != -1.0 and nota >= 6.0:
		soma = sum(n)
		quant = size(n)
		media = soma/quant
		print(round(media, 2)
	else:
		print(max(u))
-- ERROR:
File "XXXX", line 12
    elif nota >= 6.0:
                    ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:57:54) 
-- CODE:
from numpy import*
nota = array(eval(input("digite as notas: ")))
nome = eval(input("digite os nomes: "))
falt = 0
apro = 0
while nota > 0 and nota < 10:
	nota = array(eval(input("digite as notas: ")))
	nome = eval(input("digite os nomes: "))
	if nota == -1.0:
		falt = falt + 1
		print(falt)
	elif nota >= 6.0:
		apro = apro + 1
		print(apro)
	elif nota != -1.0 and nota >= 6.0:
		soma = sum(n)
		quant = size(n)
		media = soma/quant
		print(round(media, 2)
	else:
		print(max(u))
-- ERROR:
File "XXXX", line 20
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:58:06) 
-- CODE:
from numpy import*
nota = array(eval(input("digite as notas: ")))
nome = eval(input("digite os nomes: "))
falt = 0
apro = 0
while nota > 0 and nota < 10:
	nota = array(eval(input("digite as notas: ")))
	nome = eval(input("digite os nomes: "))
	if nota == -1.0:
		falt = falt + 1
		print(falt)
	elif nota >= 6.0:
		apro = apro + 1
		print(apro)
	elif nota != -1.0 and nota >= 6.0:
		soma = sum(n)
		quant = size(n)
		media = soma/quant
		print(round(media, 2)
	else:
		print(max(u))
-- ERROR:
File "XXXX", line 20
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:58:17) 
-- CODE:
from numpy import*
nota = array(eval(input("digite as notas: ")))
nome = eval(input("digite os nomes: "))
falt = 0
apro = 0
while nota > 0 and nota < 10:
	nota = array(eval(input("digite as notas: ")))
	nome = eval(input("digite os nomes: "))
	if nota == -1.0:
		falt = falt + 1
		print(falt)
	elif nota >= 6.0:
		apro = apro + 1
		print(apro)
	elif nota != -1.0 and nota >= 6.0:
		soma = sum(n)
		quant = size(n)
		media = soma/quant
		print(round(media, 2)
	
-- ERROR:
File "XXXX", line 21
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:58:24) 
-- CODE:
from numpy import*
nota = array(eval(input("digite as notas: ")))
nome = eval(input("digite os nomes: "))
falt = 0
apro = 0
while nota > 0 and nota < 10:
	nota = array(eval(input("digite as notas: ")))
	nome = eval(input("digite os nomes: "))
	if nota == -1.0:
		falt = falt + 1
		print(falt)
	elif nota >= 6.0:
		apro = apro + 1
		print(apro)
	elif nota != -1.0 and nota >= 6.0:
		soma = sum(n)
		quant = size(n)
		media = soma/quant
		print(round(media, 2)
-- ERROR:
File "XXXX", line 20
    
                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:18:34) 
-- CODE:
from numpy import*
nota = array(eval(input("digite as notas: ")))
nome = eval(input("digite os nomes: "))
i = 0
falt = 0
apro = 0
while i <size(nota):
	if nota == -1.0:
		falt = falt + 1
	print(falt)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:18:55) 
-- CODE:
from numpy import*
nota = array(eval(input("digite as notas: ")))
nome = eval(input("digite os nomes: "))
i = 0
falt = 0
apro = 0
while i <size(nota):
	if nota == -1.0:
		falt = falt + 1
	print(falt)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:19:27) 
-- CODE:
from numpy import*
nota = array(eval(input("digite as notas: ")))
nome = input("digite os nomes: "))
i = 0
falt = 0
apro = 0
while i <size(nota):
	if nota == -1.0:
		falt = falt + 1
	print(falt)
	
-- ERROR:
File "XXXX", line 3
    nome = input())
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:19:39) 
-- CODE:
from numpy import*
nota = array(eval(input("digite as notas: ")))
nome = input("digite os nomes: ")
i = 0
falt = 0
apro = 0
while i <size(nota):
	if nota == -1.0:
		falt = falt + 1
	print(falt)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 17:19:39) 
-- CODE:
from numpy import*
nota = array(eval(input("digite as notas: ")))
nome = input("digite os nomes: ")
i = 0
falt = 0
apro = 0
while i <size(nota):
	if nota == -1.0:
		falt = falt + 1
	print(falt)
	
-- EXECUTION TIME:
0.351367
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1771/1580/main.py", line 8, in <module>
    if nota == -1.0:
ValueError: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:19:59) 
-- CODE:
from numpy import*
nota = array(eval(input("digite as notas: ")))
nome = input("digite os nomes: ")
i = 0
falt = 0
apro = 0
while i <size(nota):
	if nota.any() == -1.0:
		falt = falt + 1
	print(falt)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
